testing form validation

--- a/wa-resources/todo.txt
+++ b/wa-resources/todo.txt
@@ -5,3 +5,5 @@ prevent preset table from resizing
 make responsive/adaptive
 
 'settings saved' pop up when saving settings
+
+alert for no web audio !!
