--- a/wa-resources/todo.txt
+++ b/wa-resources/todo.txt
@@ -1,9 +1,7 @@
-error check inputs from form.
-
-prevent preset table from resizing
 
 make responsive/adaptive
+-->rescale canvas on resize & load... can copy from portfolio
+
 
 'settings saved' pop up when saving settings
-
 alert for no web audio !!
