app functionality done

--- a/wa-resources/todo.txt
+++ b/wa-resources/todo.txt
@@ -1,8 +1,4 @@
-test buffer source node stop, only call to stop source if is playing
-
-'settings saved' pop up when saving settings
-alert for no web audio !!
-
-add hover/active/etc. styles and classes with JS when needed 
-
 clean up css when all others are done
+
+
+gear/software on twitch description
