tic-tac-toe test

--- a/wa-resources/todo.txt
+++ b/wa-resources/todo.txt
@@ -1,6 +1,8 @@
 For buttons... set the event handlers on mousedown(or mouse up), keydown(or key up), and touchstart...
 because click is too slow
 
+Prevent saved settings from showing when there is bad input!!! i.e. when the alert shows
+
 WaParam automation end time is incorrect if declick is off??? fix
 
 WaWetDry node or OnOff ... can toggle any processing on or off. completely disables effect 
