--- a/wa-resources/todo.txt
+++ b/wa-resources/todo.txt
@@ -1,5 +1,4 @@
-Ability to turn EQ curve off as well... save batery etc.
-consider checking answer based on user's parameter values instead of reference b/c ref spoils answer
+MEDIAFILESROOT as a constant. 
 add some way to reveal answer
 
 
